my navbar section done

--- a/index.html
+++ b/index.html
@@ -14,25 +14,41 @@
   </head>
   <body>
     <!-- Navbar Section  start -->
-    <section >
-      
-        <div class="navbar bg-base-100 shadow-sm lg:pl-32 lg:pr-32">
+    <section>
+      <div class="navbar bg-base-100 shadow-sm lg:pl-32 lg:pr-32">
         <div class="navbar-start">
-          
-          <a class="text-xl">SwiftCart</a>
+          <a class="text-xl text-[#4b3deb] font-bold">SwiftCart</a>
         </div>
         <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>
+          <ul class="menu menu-horizontal px-1 bg-transparent">
             <li>
-              <a>Products</a>
+              <a
+                class="bg-transparent hover:bg-transparent hover:text-[#4b3deb]"
+                >Home</a
+              >
             </li>
-            <li><a>About</a></li>
-            <li><a>Contact</a></li>
+            <li>
+              <a
+                class="bg-transparent hover:bg-transparent hover:text-[#4b3deb]"
+                >Products</a
+              >
+            </li>
+            <li>
+              <a
+                class="bg-transparent hover:bg-transparent hover:text-[#4b3deb]"
+                >About</a
+              >
+            </li>
+            <li>
+              <a
+                class="bg-transparent hover:bg-transparent hover:text-[#4b3deb]"
+                >Contact</a
+              >
+            </li>
           </ul>
         </div>
         <div class="navbar-end">
-          <img class="w-9" src="image/shopping-cart.png" alt="" srcset="" />
+          <img class="w-4 lg:w-8" src="image/trolley.png" alt="" srcset="" />
           <div class="dropdown dropdown-end">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
               <svg
@@ -52,19 +68,37 @@
             </div>
             <ul
               tabindex="-1"
-              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1  shadow"
+              class="menu menu-sm bg-transparent dropdown-content bg-base-100 rounded-box z-1 shadow"
             >
-              <li><a>Home</a></li>
               <li>
-                <a>Products</a>
+                <a
+                  class="bg-transparent hover:bg-transparent hover:text-[#4b3deb]"
+                  >Home</a
+                >
               </li>
-              <li><a>About</a></li>
-              <li><a>Contact</a></li>
+              <li>
+                <a
+                  class="bg-transparent hover:bg-transparent hover:text-[#4b3deb]"
+                  >Products</a
+                >
+              </li>
+              <li>
+                <a
+                  class="bg-transparent hover:bg-transparent hover:text-[#4b3deb]"
+                  >About</a
+                >
+              </li>
+              <li>
+                <a
+                  class="bg-transparent hover:bg-transparent hover:text-[#4b3deb]"
+                  >Contact</a
+                >
+              </li>
             </ul>
           </div>
         </div>
-       </div>
-</section>
+      </div>
+    </section>
     <!-- Navbar Section  End -->
   </body>
 </html>
