--- a/index.html
+++ b/index.html
@@ -100,5 +100,29 @@
       </div>
     </section>
     <!-- Navbar Section  End -->
+
+    <!-- Banner section start  -->
+    <div
+      class="relative h-[500px] w-full overflow-hidden flex items-center bg-cover bg-center"
+      style="background-image: url(image/banner-image.png)"
+    >
+      <div
+        class="absolute inset-0 bg-gradient-to-r from-slate-900/90 via-slate-900/60 to-transparent"
+      ></div>
+
+      <div class="container relative z-10 text-white lg:pl-32 lg:pr-32">
+        <div class="max-w-xl">
+          <h1 class="text-4xl md:text-5xl font-bold mb-4">
+            Best Collection For You
+          </h1>
+          <p class="text-gray-300 mb-8">
+            Discover the latest trends in fashion, electronics, and more.
+          </p>
+          <button class="bg-[#4b3deb] py-3 px-8 rounded-lg">Shop Now</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Banner section End  -->
   </body>
 </html>
